# 360extractor

./: .gitattributes  .gitignore  360extract-ui.bat  LICENSE  README.md  pyproject.toml
docs/: HANDOFF.md  ui-redesign.md
examples/rigs/: car-forward.json  cube6.json  dome8.json  handheld.json  ring8.json
scripts/: vendor_icons.py
src/threesixty/: __init__.py  autograde.py  cameras.py  cli.py  extract.py  ffmpeg.py  frames.py  gps.py  motion.py  plan.py  project.py  recent.py  rig.py  segment.py  sharp.py  tools.py  userpresets.py
src/threesixty/colmap/: __init__.py  batches.py  export.py  locate.py  model.py
src/threesixty/mask/: __init__.py  apply.py  dynamic.py  fuse.py  geometric.py  ml.py
src/threesixty/splat/: __init__.py  clean.py  ply.py
src/threesixty/web/: __init__.py  jobs.py  picker.py  runner.py  server.py  stages.py
src/threesixty/web/static/: index.html
src/threesixty/web/static/css/: app.css  tokens.css
src/threesixty/web/static/js/: api.js  app.js  components.js  geometry.js  icons.js  pipeline.js  pointcloud.js
tests/: conftest.py  test_autograde.py  test_cameras.py  test_colmap.py  test_colmap_integration.py  test_extract_integration.py  test_frames.py  test_fuse.py  test_gps.py  test_grade.py  test_jobs.py  test_mask.py  test_ml.py  test_native_size.py  test_orientation.py  test_overlay_geometry.py  test_plan.py  test_points.py  test_project.py  test_rig.py  test_segment.py  test_sharp.py  test_splat.py  test_ui.py  test_web.py  test_web_grade.py  test_web_mask.py  test_web_project.py  test_web_refine.py
(+6 files in other folders)
