[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threesixty-extract"
version = "0.1.0"
description = "Extract perspective image sets from 360 equirectangular footage for photogrammetry and 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Elin" }]
keywords = ["360", "equirectangular", "photogrammetry", "gaussian-splatting", "ffmpeg", "v360"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = []

[project.optional-dependencies]
ml = ["ultralytics>=8.3", "torch>=2.2", "opencv-python-headless>=4.9", "numpy>=1.24"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
360extract = "threesixty.cli:main"
threesixty = "threesixty.cli:main"

[project.urls]
Homepage = "https://github.com/Ladypoly/360extractor"
Source = "https://github.com/Ladypoly/360extractor"
Issues = "https://github.com/Ladypoly/360extractor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/threesixty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "ffmpeg: requires a working ffmpeg with the v360 filter",
  "slow: runs a real detection model, and may download weights",
]

